--- a/LaTeX/Projektrapport/Projektrapport.tex
+++ b/LaTeX/Projektrapport/Projektrapport.tex
@@ -15,6 +15,7 @@
 \include{Projektbeskrivelse/Projektbeskrivelse}
 \include{Konklusion/Konklusion}
 
+\include{Ordliste}
 \include{bibtex}
 
 \end{document}
