--- a/LaTeX/Projektrapport/Projektbeskrivelse/DesignOgImplementering/Frontend/Presentation.tex
+++ b/LaTeX/Projektrapport/Projektbeskrivelse/DesignOgImplementering/Frontend/Presentation.tex
@@ -13,4 +13,4 @@ Som man kan se på figur \ref{fig:sub2} er kasseapparatet delt op i 3 segmenter.
 For at sikre at der var mange måder at tilføje produkter på, blev det udviklet så man kunne tilføje flere produkter, ved at klikke gentagne gange på hvert produkt. Denne funktionalitet virkede især smart, da kasseapparatet var tænkt til at skulle køre på en touch skærm. Samtidig kan man trykke på et tilføjet produkt i indkøbskurven, skrive et antal i betalingsdelen og trykke på mængde. Så vil det angivne antal af produktet blive tilføjet.\\
 
 \textbf{Knapper og sideskift} \\
-Noget der er lagt meget tid i er knappeskift. Dette blev implementeret ved at oprette et kontrolobjekt til knapper\footnote{ProductButtonControl klassen. Der kan læses mere om dette objekt i ProduktDokumentationen (indsæt sidetal samt figur nummer)}. Dette objekt indeholder en liste der inderholder liste af 12 knapper. Derved kan der nemt skiftes side af knapper bare ved at ændre index på den liste der vises på kasseapparatets produktknapper.
+Noget der er lagt meget tid i er knappeskift. Dette blev implementeret ved at oprette et kontrolobjekt til knapper\footnote{ProductButtonControl klassen. Der kan læses mere om denne klasse i ProduktDokumentationen under Systemdesign - Kasseapparat - Presentation - Klassebeskrivelser}. Dette objekt indeholder en liste der inderholder liste af 12 knapper. Derved kan der nemt skiftes side af knapper bare ved at ændre index på den liste der vises på kasseapparatets produktknapper.
